src/codegen/tests/snapshots/rusty__codegen__tests__debug_tests__global_var_array_added_to_debug_info.snap
---
source: src/codegen/tests/debug_tests.rs
expression: codegen.0
---
; ModuleID = 'main'
source_filename = "main"

@a = global [11 x i32] zeroinitializer, !dbg !0
@b = global [110 x i32] zeroinitializer, !dbg !9
@c = global [11 x [10 x i32]] zeroinitializer, !dbg !14

!llvm.dbg.cu = !{!19}

!0 = !DIGlobalVariableExpression(var: !1, expr: !DIExpression())
!1 = distinct !DIGlobalVariable(name: "a", scope: !2, file: !2, line: 3, type: !3, isLocal: false, isDefinition: true)
!2 = !DIFile(filename: "main", directory: "")
!3 = !DICompositeType(tag: DW_TAG_array_type, baseType: !4, size: 352, align: 64, elements: !7)
!4 = !DIDerivedType(tag: DW_TAG_typedef, name: "dint", scope: !5, file: !5, line: 10, baseType: !6, align: 32)
!5 = !DIFile(filename: "<internal>", directory: "")
!6 = !DIBasicType(name: "int32", size: 32, encoding: DW_ATE_signed, flags: DIFlagPublic)
!7 = !{!8}
!8 = !DISubrange(count: 10, lowerBound: 0)
!9 = !DIGlobalVariableExpression(var: !10, expr: !DIExpression())
!10 = distinct !DIGlobalVariable(name: "b", scope: !2, file: !2, line: 4, type: !11, isLocal: false, isDefinition: true)
!11 = !DICompositeType(tag: DW_TAG_array_type, baseType: !4, size: 3520, align: 64, elements: !12)
!12 = !{!8, !13}
!13 = !DISubrange(count: 9, lowerBound: 11)
!14 = !DIGlobalVariableExpression(var: !15, expr: !DIExpression())
!15 = distinct !DIGlobalVariable(name: "c", scope: !2, file: !2, line: 5, type: !16, isLocal: false, isDefinition: true)
!16 = !DICompositeType(tag: DW_TAG_array_type, baseType: !17, size: 3520, align: 64, elements: !7)
!17 = !DICompositeType(tag: DW_TAG_array_type, baseType: !4, size: 320, align: 64, elements: !18)
!18 = !{!13}
!19 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "RuSTy Structured text Compiler", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug, enums: !20, globals: !21, splitDebugInlining: false)
!20 = !{}
!21 = !{!0, !9, !14}

