src/codegen/tests/snapshots/rusty__codegen__tests__debug_tests__global_var_byteseq_added_to_debug_info.snap
---
source: src/codegen/tests/debug_tests.rs
expression: codegen.0
---
; ModuleID = 'main'
source_filename = "main"

@a = global i8 0, !dbg !0
@b = global i8 0, !dbg !4
@c = global i16 0, !dbg !9
@d = global i32 0, !dbg !13
@e = global i64 0, !dbg !17

!llvm.dbg.cu = !{!21}

!0 = !DIGlobalVariableExpression(var: !1, expr: !DIExpression())
!1 = distinct !DIGlobalVariable(name: "a", scope: !2, file: !2, line: 3, type: !3, isLocal: false, isDefinition: true)
!2 = !DIFile(filename: "main", directory: "")
!3 = !DIBasicType(name: "bool", size: 8, encoding: DW_ATE_boolean, flags: DIFlagPublic)
!4 = !DIGlobalVariableExpression(var: !5, expr: !DIExpression())
!5 = distinct !DIGlobalVariable(name: "b", scope: !2, file: !2, line: 4, type: !6, isLocal: false, isDefinition: true)
!6 = !DIDerivedType(tag: DW_TAG_typedef, name: "byte", scope: !7, file: !7, line: 1, baseType: !8, align: 8)
!7 = !DIFile(filename: "<internal>", directory: "")
!8 = !DIBasicType(name: "uint8", size: 8, encoding: DW_ATE_unsigned, flags: DIFlagPublic)
!9 = !DIGlobalVariableExpression(var: !10, expr: !DIExpression())
!10 = distinct !DIGlobalVariable(name: "c", scope: !2, file: !2, line: 5, type: !11, isLocal: false, isDefinition: true)
!11 = !DIDerivedType(tag: DW_TAG_typedef, name: "word", scope: !7, file: !7, line: 5, baseType: !12, align: 16)
!12 = !DIBasicType(name: "uint16", size: 16, encoding: DW_ATE_unsigned, flags: DIFlagPublic)
!13 = !DIGlobalVariableExpression(var: !14, expr: !DIExpression())
!14 = distinct !DIGlobalVariable(name: "d", scope: !2, file: !2, line: 6, type: !15, isLocal: false, isDefinition: true)
!15 = !DIDerivedType(tag: DW_TAG_typedef, name: "dword", scope: !7, file: !7, line: 9, baseType: !16, align: 32)
!16 = !DIBasicType(name: "uint32", size: 32, encoding: DW_ATE_unsigned, flags: DIFlagPublic)
!17 = !DIGlobalVariableExpression(var: !18, expr: !DIExpression())
!18 = distinct !DIGlobalVariable(name: "e", scope: !2, file: !2, line: 7, type: !19, isLocal: false, isDefinition: true)
!19 = !DIDerivedType(tag: DW_TAG_typedef, name: "lword", scope: !7, file: !7, line: 13, baseType: !20, align: 64)
!20 = !DIBasicType(name: "uint64", size: 64, encoding: DW_ATE_unsigned, flags: DIFlagPublic)
!21 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "RuSTy Structured text Compiler", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug, enums: !22, globals: !23, splitDebugInlining: false)
!22 = !{}
!23 = !{!0, !4, !9, !13, !17}

