src/codegen/tests/snapshots/rusty__codegen__tests__debug_tests__global_var_enum_added_to_debug_info.snap
---
source: src/codegen/tests/debug_tests.rs
expression: codegen.0
---
; ModuleID = 'main'
source_filename = "main"

@en3 = global i64 0, !dbg !0
@a = unnamed_addr constant i32 0, !dbg !7
@b = unnamed_addr constant i32 1, !dbg !12
@c = unnamed_addr constant i32 2, !dbg !14
@d = unnamed_addr constant i8 0, !dbg !16
@e = unnamed_addr constant i8 1, !dbg !21
@f = unnamed_addr constant i8 2, !dbg !23
@a.1 = unnamed_addr constant i64 0, !dbg !25
@b.2 = unnamed_addr constant i64 1, !dbg !27
@c.3 = unnamed_addr constant i64 2, !dbg !29

!llvm.dbg.cu = !{!31}

!0 = !DIGlobalVariableExpression(var: !1, expr: !DIExpression())
!1 = distinct !DIGlobalVariable(name: "en3", scope: !2, file: !2, line: 5, type: !3, isLocal: false, isDefinition: true)
!2 = !DIFile(filename: "main", directory: "")
!3 = !DIDerivedType(tag: DW_TAG_typedef, name: "__global_en3", scope: !2, file: !2, line: 5, baseType: !4, align: 64)
!4 = !DIDerivedType(tag: DW_TAG_typedef, name: "lint", scope: !5, file: !5, line: 14, baseType: !6, align: 64)
!5 = !DIFile(filename: "<internal>", directory: "")
!6 = !DIBasicType(name: "int64", size: 64, encoding: DW_ATE_signed, flags: DIFlagPublic)
!7 = !DIGlobalVariableExpression(var: !8, expr: !DIExpression())
!8 = distinct !DIGlobalVariable(name: "en1.a", scope: !2, file: !2, line: 2, type: !9, isLocal: false, isDefinition: true)
!9 = !DIDerivedType(tag: DW_TAG_typedef, name: "en1", scope: !2, file: !2, line: 2, baseType: !10, align: 32)
!10 = !DIDerivedType(tag: DW_TAG_typedef, name: "dint", scope: !5, file: !5, line: 10, baseType: !11, align: 32)
!11 = !DIBasicType(name: "int32", size: 32, encoding: DW_ATE_signed, flags: DIFlagPublic)
!12 = !DIGlobalVariableExpression(var: !13, expr: !DIExpression())
!13 = distinct !DIGlobalVariable(name: "en1.b", scope: !2, file: !2, line: 2, type: !9, isLocal: false, isDefinition: true)
!14 = !DIGlobalVariableExpression(var: !15, expr: !DIExpression())
!15 = distinct !DIGlobalVariable(name: "en1.c", scope: !2, file: !2, line: 2, type: !9, isLocal: false, isDefinition: true)
!16 = !DIGlobalVariableExpression(var: !17, expr: !DIExpression())
!17 = distinct !DIGlobalVariable(name: "en2.d", scope: !2, file: !2, line: 3, type: !18, isLocal: false, isDefinition: true)
!18 = !DIDerivedType(tag: DW_TAG_typedef, name: "en2", scope: !2, file: !2, line: 3, baseType: !19, align: 8)
!19 = !DIDerivedType(tag: DW_TAG_typedef, name: "byte", scope: !5, file: !5, line: 1, baseType: !20, align: 8)
!20 = !DIBasicType(name: "uint8", size: 8, encoding: DW_ATE_unsigned, flags: DIFlagPublic)
!21 = !DIGlobalVariableExpression(var: !22, expr: !DIExpression())
!22 = distinct !DIGlobalVariable(name: "en2.e", scope: !2, file: !2, line: 3, type: !18, isLocal: false, isDefinition: true)
!23 = !DIGlobalVariableExpression(var: !24, expr: !DIExpression())
!24 = distinct !DIGlobalVariable(name: "en2.f", scope: !2, file: !2, line: 3, type: !18, isLocal: false, isDefinition: true)
!25 = !DIGlobalVariableExpression(var: !26, expr: !DIExpression())
!26 = distinct !DIGlobalVariable(name: "__global_en3.a", scope: !2, file: !2, line: 5, type: !3, isLocal: false, isDefinition: true)
!27 = !DIGlobalVariableExpression(var: !28, expr: !DIExpression())
!28 = distinct !DIGlobalVariable(name: "__global_en3.b", scope: !2, file: !2, line: 5, type: !3, isLocal: false, isDefinition: true)
!29 = !DIGlobalVariableExpression(var: !30, expr: !DIExpression())
!30 = distinct !DIGlobalVariable(name: "__global_en3.c", scope: !2, file: !2, line: 5, type: !3, isLocal: false, isDefinition: true)
!31 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "RuSTy Structured text Compiler", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug, enums: !32, globals: !33, splitDebugInlining: false)
!32 = !{}
!33 = !{!0, !7, !12, !14, !16, !21, !23, !25, !27, !29}

