src/codegen/tests/snapshots/rusty__codegen__tests__debug_tests__global_var_nested_struct_added_to_debug_info.snap
---
source: src/codegen/tests/debug_tests.rs
expression: codegen.0
---
; ModuleID = 'main'
source_filename = "main"

%myStruct = type { i32, %myStruct2 }
%myStruct2 = type { i32, double }

@gStruct = global %myStruct zeroinitializer, !dbg !0
@__myStruct__init = unnamed_addr constant %myStruct zeroinitializer, !dbg !16
@__myStruct2__init = unnamed_addr constant %myStruct2 zeroinitializer, !dbg !18

!llvm.dbg.cu = !{!20}

!0 = !DIGlobalVariableExpression(var: !1, expr: !DIExpression())
!1 = distinct !DIGlobalVariable(name: "gStruct", scope: !2, file: !2, line: 15, type: !3, isLocal: false, isDefinition: true)
!2 = !DIFile(filename: "main", directory: "")
!3 = !DICompositeType(tag: DW_TAG_structure_type, name: "mystruct", scope: !2, file: !2, line: 2, size: 192, align: 64, flags: DIFlagPublic, elements: !4, identifier: "mystruct")
!4 = !{!5, !9}
!5 = !DIDerivedType(tag: DW_TAG_member, name: "a", scope: !2, file: !2, line: 3, baseType: !6, size: 32, align: 32, flags: DIFlagPublic)
!6 = !DIDerivedType(tag: DW_TAG_typedef, name: "dint", scope: !7, file: !7, line: 10, baseType: !8, align: 32)
!7 = !DIFile(filename: "<internal>", directory: "")
!8 = !DIBasicType(name: "int32", size: 32, encoding: DW_ATE_signed, flags: DIFlagPublic)
!9 = !DIDerivedType(tag: DW_TAG_member, name: "b", scope: !2, file: !2, line: 4, baseType: !10, size: 128, align: 64, offset: 64, flags: DIFlagPublic)
!10 = !DICompositeType(tag: DW_TAG_structure_type, name: "mystruct2", scope: !2, file: !2, line: 8, size: 128, align: 64, flags: DIFlagPublic, elements: !11, identifier: "mystruct2")
!11 = !{!12, !13}
!12 = !DIDerivedType(tag: DW_TAG_member, name: "a", scope: !2, file: !2, line: 9, baseType: !6, size: 32, align: 32, flags: DIFlagPublic)
!13 = !DIDerivedType(tag: DW_TAG_member, name: "b", scope: !2, file: !2, line: 10, baseType: !14, size: 64, align: 64, offset: 64, flags: DIFlagPublic)
!14 = !DIDerivedType(tag: DW_TAG_typedef, name: "lreal", scope: !7, file: !7, line: 38, baseType: !15, align: 64)
!15 = !DIBasicType(name: "REAL64", size: 64, encoding: DW_ATE_float, flags: DIFlagPublic)
!16 = !DIGlobalVariableExpression(var: !17, expr: !DIExpression())
!17 = distinct !DIGlobalVariable(name: "__myStruct__init", scope: !2, file: !2, line: 2, type: !3, isLocal: false, isDefinition: true)
!18 = !DIGlobalVariableExpression(var: !19, expr: !DIExpression())
!19 = distinct !DIGlobalVariable(name: "__myStruct2__init", scope: !2, file: !2, line: 8, type: !10, isLocal: false, isDefinition: true)
!20 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "RuSTy Structured text Compiler", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug, enums: !21, globals: !22, splitDebugInlining: false)
!21 = !{}
!22 = !{!0, !16, !18}

