src/codegen/tests/snapshots/rusty__codegen__tests__debug_tests__global_var_pointer_added_to_debug_info.snap
---
source: src/codegen/tests/debug_tests.rs
expression: codegen.0
---
; ModuleID = 'main'
source_filename = "main"

@a = global i32* null, !dbg !0

!llvm.dbg.cu = !{!7}

!0 = !DIGlobalVariableExpression(var: !1, expr: !DIExpression())
!1 = distinct !DIGlobalVariable(name: "a", scope: !2, file: !2, line: 3, type: !3, isLocal: false, isDefinition: true)
!2 = !DIFile(filename: "main", directory: "")
!3 = !DIDerivedType(tag: DW_TAG_pointer_type, name: "__global_a", baseType: !4, size: 64, align: 64, dwarfAddressSpace: 1)
!4 = !DIDerivedType(tag: DW_TAG_typedef, name: "dint", scope: !5, file: !5, line: 10, baseType: !6, align: 32)
!5 = !DIFile(filename: "<internal>", directory: "")
!6 = !DIBasicType(name: "int32", size: 32, encoding: DW_ATE_signed, flags: DIFlagPublic)
!7 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "RuSTy Structured text Compiler", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug, enums: !8, globals: !9, splitDebugInlining: false)
!8 = !{}
!9 = !{!0}

