src/codegen/tests/snapshots/rusty__codegen__tests__debug_tests__global_var_struct_added_to_debug_info.snap
---
source: src/codegen/tests/debug_tests.rs
expression: codegen.0
---
; ModuleID = 'main'
source_filename = "main"

%myStruct = type { i32, double, [11 x i32] }

@gStruct = global %myStruct zeroinitializer, !dbg !0
@b = global [11 x %myStruct] zeroinitializer, !dbg !16
@__myStruct__init = unnamed_addr constant %myStruct zeroinitializer, !dbg !19

!llvm.dbg.cu = !{!21}

!0 = !DIGlobalVariableExpression(var: !1, expr: !DIExpression())
!1 = distinct !DIGlobalVariable(name: "gStruct", scope: !2, file: !2, line: 11, type: !3, isLocal: false, isDefinition: true)
!2 = !DIFile(filename: "main", directory: "")
!3 = !DICompositeType(tag: DW_TAG_structure_type, name: "mystruct", scope: !2, file: !2, line: 2, size: 480, align: 64, flags: DIFlagPublic, elements: !4, identifier: "mystruct")
!4 = !{!5, !9, !12}
!5 = !DIDerivedType(tag: DW_TAG_member, name: "a", scope: !2, file: !2, line: 3, baseType: !6, size: 32, align: 32, flags: DIFlagPublic)
!6 = !DIDerivedType(tag: DW_TAG_typedef, name: "dint", scope: !7, file: !7, line: 10, baseType: !8, align: 32)
!7 = !DIFile(filename: "<internal>", directory: "")
!8 = !DIBasicType(name: "int32", size: 32, encoding: DW_ATE_signed, flags: DIFlagPublic)
!9 = !DIDerivedType(tag: DW_TAG_member, name: "b", scope: !2, file: !2, line: 4, baseType: !10, size: 64, align: 64, offset: 64, flags: DIFlagPublic)
!10 = !DIDerivedType(tag: DW_TAG_typedef, name: "lreal", scope: !7, file: !7, line: 38, baseType: !11, align: 64)
!11 = !DIBasicType(name: "REAL64", size: 64, encoding: DW_ATE_float, flags: DIFlagPublic)
!12 = !DIDerivedType(tag: DW_TAG_member, name: "c", scope: !2, file: !2, line: 5, baseType: !13, size: 352, align: 64, offset: 128, flags: DIFlagPublic)
!13 = !DICompositeType(tag: DW_TAG_array_type, baseType: !6, size: 352, align: 64, elements: !14)
!14 = !{!15}
!15 = !DISubrange(count: 10, lowerBound: 0)
!16 = !DIGlobalVariableExpression(var: !17, expr: !DIExpression())
!17 = distinct !DIGlobalVariable(name: "b", scope: !2, file: !2, line: 12, type: !18, isLocal: false, isDefinition: true)
!18 = !DICompositeType(tag: DW_TAG_array_type, baseType: !3, size: 5280, align: 64, elements: !14)
!19 = !DIGlobalVariableExpression(var: !20, expr: !DIExpression())
!20 = distinct !DIGlobalVariable(name: "__myStruct__init", scope: !2, file: !2, line: 2, type: !3, isLocal: false, isDefinition: true)
!21 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "RuSTy Structured text Compiler", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug, enums: !22, globals: !23, splitDebugInlining: false)
!22 = !{}
!23 = !{!0, !16, !19}

